codex-rs/tui-pty-e2e/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_explored_after_assistant_message.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
• Explored
  └ Read file1.rs, file2.rs

• Ran 'Running tests(cargo test)'
  └ Tests passed

────────────────────────────────────────────────────────────────────────────────

• Based on my exploration, the most significant TUI Rust source file by size is:

• Explored
  └ Read SKILL.md
    Search undefined
    Read config.toml

────────────────────────────────────────────────────────────────────────────────

• The chatwidget is the heart of the TUI experience.


› [DEFAULT_PROMPT]

  ⎇ master · ? for shortcuts
