codex-rs/tui-pty-e2e/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_tool_call_echo.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
› Echo hello


────────────────────────────────────────────────────────────────────────────────

• Test message 1Test message 2

• Explored
  └ Read config.toml

────────────────────────────────────────────────────────────────────────────────

• Tool call completed successfully.


› [DEFAULT_PROMPT]

  ⎇ master · ? for shortcuts
