codex-rs/tui-pty-e2e/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_tool_call_read.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(session.screen_contents())
---
› Read test.txt


────────────────────────────────────────────────────────────────────────────────

• Test message 1Test message 2

• Explored
  └ Read config.toml

────────────────────────────────────────────────────────────────────────────────

• Tool call completed successfully.


› [DEFAULT_PROMPT]

  ⎇ master · ? for shortcuts
